deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: malcolm-portfolio-node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: malcolm-portfolio-node-app
  template:
    metadata:
      labels:
        app: malcolm-portfolio-node-app
    spec:
      containers:
        - name: malcolm-portfolio-node-app
          image: malcolmcfraser/malcolm-portfolio-node-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: malcolm-portfolio-node-app
