malcolm-portfolio-node-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: malcolm-portfolio-node-app-ingress
spec:
  rules:
    - host: "your-app.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 80
